@@ -241,7 +241,7 @@ public class DocGenService {
     while (textNavigation.hasNext()) {
       var item = (TextSelection) textNavigation.nextSelection();
 
-      if (item.getText().contains("Conditional") && !dataReplacement.isBlank()) {
+      if (item.getText().contains("Conditional") && !org.apache.commons.lang3.StringUtils.isBlank(dataReplacement)) {
         StringJoiner value = new StringJoiner(" ");
         value.add(documentTemplateSource.getConditionalValue() == null ? ""
             : documentTemplateSource.getConditionalValue());
@@ -255,13 +255,20 @@ public class DocGenService {
         } else {
           value.add(dataReplacement);
         }
-        dataReplacement = value.toString();
+        if(item.getText().contains("based on Binary Y/N") && dataReplacement.contains("No"))
+        {
+          dataReplacement = "";
+        }else if(item.getText().contains("Step_18 Conditional") && dataReplacement.isEmpty()){
+          dataReplacement = PLACEHOLDER_UNKNOWN;
+        }else {
+          dataReplacement = value.toString();
+        }
       }
 
       dataReplacement = eoiConditionalAndOptionalData(dataReplacement,
           documentTemplateSource.getConditionalValue() == null ? ""
               : documentTemplateSource.getConditionalValue());
-      if(item.getText().contains("Project_Budget") && dataReplacement.isBlank())
+      if((item.getText().contains("Project_Budget") || item.getText().contains("Project Term Budget"))  && org.apache.commons.lang3.StringUtils.isBlank(dataReplacement))
       {
          dataReplacement = PLACEHOLDER_UNKNOWN;
       }
